對話頭像初版

--- a/languages/zh-tw.json
+++ b/languages/zh-tw.json
@@ -29,6 +29,13 @@
             "Name": "聊天視窗背景透明度",
             "Hint": "調整視窗背景的透明度（0為完全透明）。"
         }
+    },
+
+    "Avatar": {
+        "WindowTitle": "選擇發言頭像",
+        "Add": "新增頭像",
+        "Managing": "正在管理",
+        "Default": "預設"
     }
   }
 }
