--- a/languages/zh-tw.json
+++ b/languages/zh-tw.json
@@ -35,7 +35,8 @@
         "WindowTitle": "選擇發言頭像",
         "Add": "新增頭像",
         "Managing": "正在管理",
-        "Default": "預設"
+        "Default": "預設",
+        "Confirm": "確認"
     }
   }
 }
