--- a/languages/zh-tw.json
+++ b/languages/zh-tw.json
@@ -1,6 +1,6 @@
 {
   "YCIO": {
-    "WindowTitle": "對話視窗",
+    "WindowTitle": "悠子的文字聊天大修模組（可在設定更改這段標題）",
     "Tabs": {
       "Public": "公開訊息",
       "OOC": "場外"
@@ -28,6 +28,10 @@
         "BackgroundOpacity": {
             "Name": "聊天視窗背景透明度",
             "Hint": "調整視窗背景的透明度（0為完全透明）。"
+        },
+        "UseTokenAvatar": {
+            "Name": "使用 Token 圖片作為預設頭像",
+            "Hint": "勾選：預設使用場景上的 Token 圖片。未勾選：預設使用角色卡面 (Actor) 圖片。\n（必須取消Token設定中的「連結角色資料」，否則它只會抓到第一個Token的圖示。）"
         }
     },
 
