--- a/languages/zh-tw.json
+++ b/languages/zh-tw.json
@@ -40,6 +40,7 @@
         "Add": "新增頭像",
         "Managing": "正在管理",
         "Default": "預設",
+        "LabelPlaceholder": "頭像註解...",
         "Confirm": "確認"
     }
   }
