加入tooltip預覽頭像

--- a/languages/zh-tw.json
+++ b/languages/zh-tw.json
@@ -41,7 +41,8 @@
         "Managing": "正在管理",
         "Default": "預設",
         "LabelPlaceholder": "頭像註解...",
-        "Confirm": "確認"
+        "Confirm": "確認",
+        "Current": "當前頭像"
     }
   }
 }
