--- a/languages/zh-tw.json
+++ b/languages/zh-tw.json
@@ -38,12 +38,12 @@
     "Avatar": {
         "WindowTitle": "選擇發言頭像",
         "Add": "新增頭像",
-        "Managing": "正在管理",
+        "Managing": "正在管理角色：",
         "Default": "預設",
         "LabelPlaceholder": "頭像註解...",
         "Confirm": "確認",
         "Current": "當前頭像：",
-        "UnlinkedWarning": "所選Token未連結角色資料<br>當前固定為Token圖片："
+        "UnlinkedWarning": "所選Token未連結角色資料<br>因此固定為Token圖片："
     }
   }
 }
