--- a/languages/zh-tw.json
+++ b/languages/zh-tw.json
@@ -1,6 +1,6 @@
 {
   "YCIO": {
-    "WindowTitle": "悠子的文字聊天大修模組（可在設定更改這段標題）",
+    "WindowTitle": "悠子的文字聊天大修模組（GM可在設定更改這段標題）",
     "MinimizeIcon": "最小化",
     "Tabs": {
       "Public": "公開訊息",
@@ -41,6 +41,7 @@
         "Add": "新增頭像",
         "Managing": "正在管理角色：",
         "Default": "預設",
+        "NoAvatar": "不顯示(GM專用)",
         "LabelPlaceholder": "頭像註解...",
         "Confirm": "確認",
         "Current": "當前頭像：",
