再次試圖處理老系統的互動訊息相容（新增選項設定）

--- a/languages/zh-tw.json
+++ b/languages/zh-tw.json
@@ -33,7 +33,7 @@
         "WindowTitle": {
             "Name": "自訂視窗標題",
             "Hint": "預設的視窗標題文字 (GM 限定)。",
-            "Changed": "浮動聊天視窗標題已變更，請重整頁面以套用。"
+            "Changed": "浮動聊天視窗標題已變更，請告知您的玩家重整頁面以套用。"
         },
         "BackgroundColor": {
             "Name": "聊天視窗背景顏色",
@@ -46,6 +46,14 @@
         "UseTokenAvatar": {
             "Name": "(實驗性)使用 Token 圖片作為預設頭像",
             "Hint": "勾選：預設使用場景上的 Token 圖片。未勾選：預設使用角色卡面 (Actor) 圖片。"
+        },
+        "HookMode": {
+            "Name": "(實驗性)切換部分老系統所需相容模式",
+            "Hint": "在某些系統中（如CoC 7e），訊息內互動機制（如點擊展開擲骰內容）可能會失效、或是多次展開與關閉，當訊息互動非正常運作時，請嘗試切換此選項。\n切換至相容模式時，會有億點點不可避免的卡頓，這不是本模組的問題。\n切換至停用時，可能導致許多第三方模組失效。",
+            "Standard": "標準（如D&D 5e）",
+            "Legacy": "相容（如CoC 7e）",
+            "None": "停用（如SR 5e）",
+            "Changed": "設定已變更，請告知您的玩家重整頁面以套用最新設定。"
         }
     },
 
