再一次試圖處理各種系統的訊息互動相容

--- a/languages/zh-tw.json
+++ b/languages/zh-tw.json
@@ -50,9 +50,9 @@
         "HookMode": {
             "Name": "(實驗性)切換部分老系統所需相容模式",
             "Hint": "在某些系統中（如CoC 7e），訊息內互動機制（如點擊展開擲骰內容）可能會失效、或是多次展開與關閉，當訊息互動非正常運作時，請嘗試切換此選項。\n切換至相容模式時，會有億點點不可避免的卡頓，這不是本模組的問題。\n切換至停用時，可能導致許多第三方模組失效。",
-            "Standard": "標準（如D&D 5e）",
-            "Legacy": "相容（如CoC 7e）",
-            "None": "停用（如SR 5e）",
+            "Standard": "標準（如D&D 5e，適用大部分系統）",
+            "Legacy": "相容（如CoC 7e，適用少數架構古老的系統）",
+            "Clone": "隔離（如SR 5e，適用少數架構與眾不同的系統）",
             "Changed": "設定已變更，請告知您的玩家重整頁面以套用最新設定。"
         }
     },
