再一次處理訊息內互動與各系統相容（應該終於好了）

--- a/languages/zh-tw.json
+++ b/languages/zh-tw.json
@@ -45,13 +45,12 @@
         },
         "UseTokenAvatar": {
             "Name": "(實驗性)使用 Token 圖片作為預設頭像",
-            "Hint": "勾選：預設使用場景上的 Token 圖片。未勾選：預設使用角色卡面 (Actor) 圖片。"
+            "Hint": "勾選：預設使用場景上的 Token 圖片。\n未勾選：預設使用角色卡面 (Actor) 圖片。"
         },
         "HookMode": {
-            "Name": "(實驗性)切換部分老系統所需相容模式",
-            "Hint": "在某些系統中（如CoC 7e），訊息內互動機制（如點擊展開擲骰內容）可能會失效、或是多次展開關閉，當訊息互動非正常運作時，請嘗試切換此選項。\n切換至相容模式時，會有億點點無法避免的效能卡頓、畫面閃爍與延遲等，這不是本模組的問題。\n切換至隔離時，可能導致部份第三方模組失效。",
+            "Name": "(實驗性)切換部分系統所需相容模式",
+            "Hint": "在某些系統中，訊息內互動機制（如點擊展開擲骰內容）可能會失效、或是多次展開關閉。當訊息互動非正常運作時，請嘗試切換此選項。\n切換至隔離時，可能導致部份第三方模組失效及些許效能損失。",
             "Standard": "標準（如D&D 5e，適用大部分系統）",
-            "Legacy": "相容（如CoC 7e，適用少數架構古老的系統）",
             "Clone": "隔離（如SR 5e，適用少數架構與眾不同的系統）",
             "Changed": "設定已變更，請告知您的玩家重整頁面以套用最新設定。"
         }
