新增選項（是否移除其他系統或模組加入的頭像）主要針對D&D5e

--- a/languages/zh-tw.json
+++ b/languages/zh-tw.json
@@ -33,7 +33,7 @@
         "WindowTitle": {
             "Name": "自訂視窗標題",
             "Hint": "預設的視窗標題文字 (GM 限定)。",
-            "Changed": "浮動聊天視窗標題已變更，請告知您的玩家重整頁面以套用。"
+            "Changed": "浮動聊天視窗標題已變更，請告知您的玩家重整網頁以套用最新設定。"
         },
         "BackgroundColor": {
             "Name": "聊天視窗背景顏色",
@@ -52,7 +52,12 @@
             "Hint": "在某些系統中，訊息內互動機制（如點擊展開擲骰內容）可能會失效、或是多次展開關閉。當訊息互動非正常運作時，請嘗試切換此選項。\n切換至隔離時，可能導致部份第三方模組失效及些許效能損失。",
             "Standard": "標準（如D&D 5e，適用大部分系統）",
             "Clone": "隔離（如SR 5e，適用少數架構與眾不同的系統）",
-            "Changed": "設定已變更，請告知您的玩家重整頁面以套用最新設定。"
+            "Changed": "設定已變更，請告知您的玩家重整網頁以套用最新設定。"
+        },
+        "CleanSender": {
+            "Name": "精簡發言者的額外資訊",
+            "Hint": "部分系統會在發言者加入額外的資訊（如D&D 5e會額外插入頭像與副標題），這將造成本模組的訊息版面不大好看。開啟此選項後，將僅保留FVTT原生的發言者名稱。",
+            "Changed": "設定已變更，請告知您的玩家重整網頁以套用最新設定。"
         }
     },
 
