原生DOM與jQuery物件的多重相容性調整設定

--- a/languages/zh-tw.json
+++ b/languages/zh-tw.json
@@ -47,16 +47,25 @@
             "Name": "(實驗性)使用 Token 圖片作為預設頭像",
             "Hint": "勾選：預設使用場景上的 Token 圖片。\n未勾選：預設使用角色卡面 (Actor) 圖片。"
         },
-        "HookMode": {
-            "Name": "(實驗性)切換部分系統所需相容模式",
-            "Hint": "在某些系統中，訊息內互動機制（如點擊展開擲骰內容）可能會失效、或是多次展開關閉。當訊息互動非正常運作時，請嘗試切換此選項。\n切換至隔離時，可能導致部份第三方模組失效及些許效能損失。",
-            "Standard": "標準（如D&D 5e，適用大部分系統）",
-            "Clone": "隔離（如SR 5e，適用少數架構與眾不同的系統）",
-            "Changed": "設定已變更，請告知您的玩家重整網頁以套用最新設定。"
-        },
         "CleanSender": {
             "Name": "精簡發言者的額外資訊",
             "Hint": "部分系統會在發言者加入額外的資訊（如D&D 5e會額外插入頭像與副標題），這將造成本模組的訊息版面不大好看。開啟此選項後，將僅保留FVTT原生的發言者名稱。",
+            "Changed": "設定已變更，請告知您的玩家重整網頁以套用最新設定。"
+        },
+        "HookArgumentType": {
+            "Name": "系統相容性：訊息內的互動功能模式 (DOM / jQuery)",
+            "Hint": "決定本模組內的訊息內互動容器類型。如果您發現訊息內的互動功能（例如攻擊、擲骰、傷害、展開骰子等）無法點擊，且瀏覽器 Console(F12) 出現紅字錯誤，請嘗試切換此選項。",
+            "Choices": {
+              "jQuery": "jQuery 物件 (相容較老的系統如 CoC 7e 等)",
+              "native": "原生 DOM 元素 (D&D 5e 等架構較新的系統適用)"
+            },
+            "Changed": "設定已變更，請告知您的玩家重整網頁以套用最新設定。"
+        },
+        "HookMode": {
+            "Name": "(實驗性)進一步切換部分系統所需的相容模式",
+            "Hint": "如果上一個選項沒有作用，請嘗試切換此選項。\n在某些架構更特殊的系統中，訊息內互動可能仍然沒有作用、或是非預期的動作（如重複多次展開關閉）。此時請嘗試切換此選項。\n切換至隔離時，可能導致部份第三方模組失效及些許效能損失。",
+            "Standard": "標準（如D&D 5e，適用大部分系統）",
+            "Clone": "隔離（如SR 5e，適用少數架構與眾不同或是較古老的系統）",
             "Changed": "設定已變更，請告知您的玩家重整網頁以套用最新設定。"
         }
     },
