新訊息播放音效

--- a/languages/zh-tw.json
+++ b/languages/zh-tw.json
@@ -52,6 +52,14 @@
             "Hint": "部分系統會在發言者加入額外的資訊（如D&D 5e會額外插入頭像與副標題），這將造成本模組的訊息版面不大好看。開啟此選項後，將僅保留FVTT原生的發言者名稱。",
             "Changed": "設定已變更，請告知您的玩家重整網頁以套用最新設定。"
         },
+        "NotificationSound": {
+            "Name": "新訊息提醒音效路徑",
+            "Hint": "預設音效路徑為 modules/yuuko-chat-interface-overhaul/sounds/page.mp3 \n若路徑留空，則不播放音效。\n （在FVTT內建的「播放清單」分頁中的「介面」選項可調整此音量大小。）"
+        },
+        "PlayOnOOC": {
+            "Name": "「場外」對話分頁的新訊息是否播放音效",
+            "Hint": "若勾選，則場外對話分頁中的新訊息也會播放音效。"
+        },
         "HookArgumentType": {
             "Name": "系統相容性：訊息內的互動功能模式 (DOM / jQuery)",
             "Hint": "決定本模組內的訊息內互動容器類型。如果您發現訊息內的互動功能（例如攻擊、擲骰、傷害、展開骰子等）無法點擊，且瀏覽器 Console(F12) 出現紅字錯誤，請嘗試切換此選項。",
