Enter/Shift+Enter切換送出

--- a/languages/zh-tw.json
+++ b/languages/zh-tw.json
@@ -76,6 +76,10 @@
         "Name": "「場外」對話分頁的新訊息是否播放音效",
         "Hint": "若勾選，則場外對話分頁中的新訊息也會播放音效。"
       },
+      "SwapEnter": {
+        "Name": "以Shift+Enter送出、Enter換行",
+        "Hint": "勾選後，按下Enter鍵為換行，Shift+Enter才會送出訊息。"
+      },
       "HookArgumentType": {
         "Name": "系統相容性：訊息內的互動功能模式 (DOM / jQuery)",
         "Hint": "決定本模組內的訊息內互動容器類型。如果您發現訊息內的互動功能（例如攻擊、擲骰、傷害、展開骰子等）無法點擊，且瀏覽器 Console(F12) 出現紅字錯誤，請嘗試切換此選項。",
