透明度調整設定

--- a/languages/zh-tw.json
+++ b/languages/zh-tw.json
@@ -50,6 +50,10 @@
         "Name": "聊天視窗背景透明度",
         "Hint": "調整視窗背景的透明度（0為完全透明）。"
       },
+      "MessageOpacity": {
+        "Name": "聊天訊息獨立透明度",
+        "Hint": "調整「顯示訊息」部分的透明度，最小限制為 0.5，以確保文字閱讀性不受全局透明度影響。"
+      },
       "HideNativeSidebar": {
         "Name": "是否隱藏FVTT內建原生聊天UI",
         "Hint": "包含側邊欄與右下彈出式氣泡訊息。",
