修改設定文字內容、整理註解

--- a/languages/zh-tw.json
+++ b/languages/zh-tw.json
@@ -43,83 +43,83 @@
       "OOC": "場外"
     },
     "Settings": {
+      "SwapEnter": {
+        "Name": "➤以Shift+Enter送出訊息",
+        "Hint": "勾選後，Shift+Enter才會送出訊息，Enter鍵為普通的換行。"
+      },
+      "NotificationSound": {
+        "Name": "➤新訊息提醒音效路徑",
+        "Hint": "(GM) 預設音效路徑為 modules/yuuko-chat-interface-overhaul/sounds/page.mp3 \n若路徑留空，則不播放音效。\n （在FVTT內建的「播放清單」分頁中的「介面」選項可調整此音量大小。）"
+      },
+      "PlayOnOOC": {
+        "Name": "➤「場外」分頁的新訊息播放音效",
+        "Hint": "(GM) 若勾選，則場外分頁中的新訊息也會播放音效。"
+      },
       "WindowTitle": {
-        "Name": "自訂視窗標題",
-        "Hint": "預設的視窗標題文字 (GM 限定)。",
-        "Changed": "浮動聊天視窗標題已變更，請告知您的玩家重整網頁以套用最新設定。"
-      },
-      "BackgroundColor": {
-        "Name": "聊天視窗背景顏色",
-        "Hint": "設定浮動視窗的背景顏色。"
-      },
-      "BackgroundOpacity": {
-        "Name": "聊天視窗背景透明度",
-        "Hint": "調整視窗背景的透明度（0為完全透明）。"
-      },
-      "MessageOpacity": {
-        "Name": "聊天訊息獨立透明度",
-        "Hint": "調整「顯示訊息」部分的透明度，最小限制為 0.5，以確保文字閱讀性不受全局透明度影響。"
+        "Name": "➤自訂視窗標題",
+        "Hint": "(GM) 浮動聊天視窗的標題文字。",
+        "Changed": "浮動聊天視窗標題已變更，<span style=\"color:#ff0000\"><b>請告知您的玩家重整網頁以套用最新設定。</b></span>。"
       },
       "HideNativeSidebar": {
-        "Name": "是否隱藏FVTT內建原生聊天UI",
-        "Hint": "包含側邊欄與右下彈出式氣泡訊息。",
+        "Name": "➤隱藏 FVTT 內建原生聊天UI",
+        "Hint": "(GM) 包含原生側邊欄聊天、右下彈出式氣泡訊息。",
         "Choices": {
           "None": "不隱藏",
           "All": "隱藏",
           "GM": "僅GM不隱藏"
         }
       },
-      "UseTokenAvatar": {
-        "Name": "(實驗性)使用 Token 圖片作為預設頭像",
-        "Hint": "勾選：預設使用場景上的 Token 圖片。\n未勾選：預設使用角色卡面 (Actor) 圖片。"
+      "BackgroundColor": {
+        "Name": "➤浮動聊天視窗背景色",
+        "Hint": "設定（你自己的）浮動聊天視窗背景顏色。"
+      },
+      "BackgroundOpacity": {
+        "Name": "➤浮動聊天視窗背景透明度",
+        "Hint": "調整（你自己的）浮動聊天視窗背景透明度（0為完全透明）。"
+      },
+      "MessageOpacity": {
+        "Name": "➤訊息獨立透明度",
+        "Hint": "調整訊息內容的透明度，最小限制為 0.5，以確保文字閱讀性。"
       },
       "CleanSender": {
-        "Name": "精簡發言者的額外資訊",
-        "Hint": "部分系統會在發言者加入額外的資訊（如D&D 5e會額外插入頭像與副標題），這將造成本模組的訊息版面不大好看。開啟此選項後，將僅保留FVTT原生的發言者名稱。",
-        "Changed": "設定已變更，請告知您的玩家重整網頁以套用最新設定。"
+        "Name": "➤精簡發言者資訊",
+        "Hint": "(GM) 部分系統會在發言者加入額外的資訊（如D&D 5e會額外插入頭像與副標題），這將造成本模組的訊息版面不大好看。\n開啟此選項後，將僅保留FVTT原生的發言者名稱。",
+        "Changed": "設定已變更，<span style=\"color:#ff0000\"><b>請告知您的玩家重整網頁以套用最新設定。</b></span>。"
       },
       "MessageTextColor": {
-        "Name": "訊息預設字體顏色",
-        "Hint": "覆蓋浮動聊天視窗內訊息內容的文字顏色（包含標題等樣式）。"
+        "Name": "➤訊息預設字體顏色",
+        "Hint": "(GM) 覆蓋浮動聊天視窗內訊息內容的文字顏色（包含標題等樣式），應對某些模組或系統會修改文字顏色。"
       },
       "EnableCustomMessageBg": {
-        "Name": "啟用自訂聊天訊息背景色",
-        "Hint": "勾選後，本模組的聊天訊息會取消其他系統或模組設定的背景顏色或背景圖片，並以下方顏色設定。"
+        "Name": "➤啟用自訂聊天訊息背景色",
+        "Hint": "(GM) 勾選後，會取消浮動聊天視窗內的訊息原本的背景顏色或圖片，並以下一個選項設定顏色。應對某些系統或模組會修改聊天訊息的背景色或覆蓋圖片（如D&D 5e）。"
       },
       "CustomMessageBgColor": {
-        "Name": "聊天訊息背景色",
-        "Hint": "自訂聊天訊息的背景顏色（需先勾選上方選項才會生效）。"
+        "Name": "➤聊天訊息背景色",
+        "Hint": "(GM) 自訂浮動聊天視窗內訊息的背景色（需勾選上一個選項才會生效）。"
       },
       "StyleOverride": {
-        "Changed": "設定已變更，請告知您的玩家重整網頁以套用最新設定。"
+        "Changed": "字體/背景樣式設定已變更，<span style=\"color:#ff0000\"><b>請告知您的玩家重整網頁以套用最新設定。</b></span>"
       },
-      "NotificationSound": {
-        "Name": "新訊息提醒音效路徑",
-        "Hint": "預設音效路徑為 modules/yuuko-chat-interface-overhaul/sounds/page.mp3 \n若路徑留空，則不播放音效。\n （在FVTT內建的「播放清單」分頁中的「介面」選項可調整此音量大小。）"
-      },
-      "PlayOnOOC": {
-        "Name": "「場外」對話分頁的新訊息是否播放音效",
-        "Hint": "若勾選，則場外對話分頁中的新訊息也會播放音效。"
-      },
-      "SwapEnter": {
-        "Name": "以Shift+Enter送出、Enter換行",
-        "Hint": "勾選後，按下Enter鍵為換行，Shift+Enter才會送出訊息。"
+      "UseTokenAvatar": {
+        "Name": "➤Token 圖片作為預設頭像(實驗性)",
+        "Hint": "未勾選：使用角色 (Actor) 圖片。\n勾選：使用場景上的 Token 圖片作為預設頭像，可能存在一些神祕問題。"
       },
       "HookArgumentType": {
-        "Name": "系統相容性：訊息內的互動功能模式 (DOM / jQuery)",
-        "Hint": "決定本模組內的訊息內互動容器類型。如果您發現訊息內的互動功能（例如攻擊、擲骰、傷害、展開骰子等）無法點擊，且瀏覽器 Console(F12) 出現紅字錯誤，請嘗試切換此選項。",
+        "Name": "➤系統相容性：訊息內的互動功能模式 (DOM / jQuery)",
+        "Hint": "(GM) 決定本模組內的訊息內互動容器類型。若您發現訊息內的互動功能（例如攻擊、擲骰、傷害、展開骰子等）無法點擊，且瀏覽器 Console(F12) 出現紅字錯誤，請嘗試切換此選項。",
         "Choices": {
           "jQuery": "jQuery 物件 (相容較老的系統如 CoC 7e 等)",
           "native": "原生 DOM 元素 (D&D 5e 等架構較新的系統適用)"
         },
-        "Changed": "設定已變更，請告知您的玩家重整網頁以套用最新設定。"
+        "Changed": "設定已變更，<span style=\"color:#ff0000\"><b>請告知您的玩家重整網頁以套用最新設定。</b></span>"
       },
       "HookMode": {
-        "Name": "(實驗性)進一步切換部分系統所需的相容模式",
-        "Hint": "如果上一個選項沒有作用，請嘗試切換此選項。\n在某些架構更特殊的系統中，訊息內互動可能仍然沒有作用、或是非預期的動作（如重複多次展開關閉）。此時請嘗試切換此選項。\n切換至隔離時，可能導致部份第三方模組失效及些許效能損失。",
-        "Standard": "標準（如D&D 5e，適用大部分系統）",
-        "Clone": "隔離（如SR 5e，適用少數架構與眾不同或是較古老的系統）",
-        "Changed": "設定已變更，請告知您的玩家重整網頁以套用最新設定。"
+        "Name": "➤進一步切換部分系統所需的相容模式(實驗性)",
+        "Hint": "(GM) 若上一個選項沒有作用，請嘗試切換此選項。\n在某些架構更特殊的系統中，訊息內互動可能仍然沒有作用、或是非預期的動作（如重複多次展開關閉）。此時請嘗試切換此選項。\n切換至隔離時，可能導致部份第三方模組失效及些許效能損失。",
+        "Standard": "標準（適用大部分系統）",
+        "Clone": "隔離（適用少數架構與眾不同或古老的系統，如SR 5e。）",
+        "Changed": "設定已變更，<span style=\"color:#ff0000\"><b>請告知您的玩家重整網頁以套用最新設定。</b></span>"
       }
     },
     "Avatar": {
