新增en、cn、ja的語系檔案

--- a/languages/zh-tw.json
+++ b/languages/zh-tw.json
@@ -161,7 +161,7 @@
     },
     "About": {
       "Title": "關於本模組",
-      "ModuleName": "悠子的文字聊天大修模組",
+      "ModuleName": "悠子的文字聊天翻修",
       "Version": "版本",
       "LastUpdate": "最後更新日期",
       "ProjectUrl": "專案網址",
