--- a/languages/zh-tw.json
+++ b/languages/zh-tw.json
@@ -1,6 +1,6 @@
 {
   "YCIO": {
-    "WindowTitle": "悠子的文字聊天大修模組（GM可在設定更改這段標題）",
+    "WindowTitle": "悠子的文字聊天翻修（GM可在設定更改這段標題）",
     "MinimizeIcon": "最小化",
     "Warning": {
       "NoLabeledAvatars": "目前的發言身分沒有設定任何帶註解的頭像",
@@ -9,7 +9,7 @@
     "Menu": {
       "ExportLog": "導出聊天紀錄",
       "ClearLog": "清除聊天紀錄",
-      "MosaicSpeaker": "馬賽克發言者（截圖用）",
+      "MosaicSpeaker": "馬賽克發言者（擷圖用）",
       "MosaicSpeakerOff": "解除馬賽克",
       "Settings": "模組設定",
       "About": "關於本模組"
