--- a/languages/ja.json
+++ b/languages/ja.json
@@ -32,7 +32,7 @@
             "InlineAvatar": "アバターから絵文字を挿入",
             "Wait": "一時停止を知らせる",
             "WaitLabel": "少し待って",
-            "WaitLabelActive": "ＯＫ、待つよ",
+            "WaitLabelActive": "待ってるね",
             "IsWaiting": "さんが「少し待って」と言っています。",
             "QuickRoll": "クイックロール",
             "QuickRollBtn": "振る！",
